--- a/pages/userinfo/userinfo.wxml
+++ b/pages/userinfo/userinfo.wxml
@@ -67,7 +67,7 @@
   </view>
   <view class='line2'></view>
 </view>
-<view wx:if="{{select=='note'}}" class="content">
+<view  wx:if="{{select=='note'}}" class="content2">
   <view class="left">
     <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
       <!-- <template is="item" data="{{...item}}" ></template> -->
@@ -110,7 +110,7 @@
   </view>
 </view>
 <!-- 收藏 -->
-<view wx:if="{{select=='collect'}}" class="content">
+<view wx:if="{{select=='collect'}}" class="content2">
    <view class="left">
     <view wx:if="{{index%2==0}}" wx:for="{{list2}}" wx:key="{{item.id}}">
       <!-- <template is="item" data="{{...item}}" ></template> -->
