--- a/pages/addNote/addNote.wxml
+++ b/pages/addNote/addNote.wxml
@@ -1,22 +1,23 @@
 <!--pages/addNote/addNote.wxml-->
-<view class='top'><text class='title'>添加日志</text></view>
-<view class='pad'></view>
-  <view class='head'>
-   <view wx:if="{{index<=8}}" wx:for="{{arr1}}" data-id="{{index}}">
-   <view style='position:absolute;margin-left:22px;margin-top:5rpx;color:#ddd;' data-id="{{index}}" bindtap='delete' class='iconfont2 icon-cha'></view>
-   <image data-item="{{item}}" bindtap='previewImage' mode='aspectFill' class='item' src="{{item}}"></image>
-   </view>
-   <image wx:if="{{check}}" bindtap='add' class='addimg' src='../../images/add.png'></image>
-   
+<view style='height:{{height4*2+20}}px' class='nav-wrap'>
+  <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>添加日志</view>
+</view>
+<view style='height:{{height4*2+20}}px;' class='pad'></view>
+<view class='head'>
+  <view wx:if="{{index<=8}}" wx:for="{{arr1}}" data-id="{{index}}">
+    <view style='position:absolute;margin-left:22px;margin-top:5rpx;color:#ddd;' data-id="{{index}}" bindtap='delete' class='iconfont2 icon-cha'></view>
+    <image data-item="{{item}}" bindtap='previewImage' mode='aspectFill' class='item' src="{{item}}"></image>
   </view>
-  
-  <textarea bindblur="content" name="content" value='{{content}}' maxlength='-1' class='textarea' placeholder-class='placeholder' placeholder='这一刻，想说点什么...'></textarea>
-  <view class='line'></view>
-  <view class='pos'>
-    <view style='color:#d7d7d7;' class='iconfont2 icon-weizhi'></view>
-    <input name="addDetail" bindtap='addDetail' value='{{addDetail}}' class='pos-inp' placeholder-class='placeholder' placeholder='你的位置'></input>
-    <view style='color:#d7d7d7;position:absolute;right:30rpx;' class='iconfont2 icon-qianjin'></view>
-  </view>
-  <view class='line'></view>
-  <button bindtap='submit' class='btn'>发布</button>
+  <image wx:if="{{check}}" bindtap='add' class='addimg' src='../../images/add.png'></image>
 
+</view>
+
+<textarea bindblur="content" name="content" value='{{content}}' maxlength='-1' class='textarea' placeholder-class='placeholder' placeholder='这一刻，想说点什么...'></textarea>
+<view class='line'></view>
+<view class='pos'>
+  <view style='color:#d7d7d7;' class='iconfont2 icon-weizhi'></view>
+  <input name="addDetail" bindtap='addDetail' value='{{addDetail}}' class='pos-inp' placeholder-class='placeholder' placeholder='你的位置'></input>
+  <view style='color:#d7d7d7;position:absolute;right:30rpx;' class='iconfont2 icon-qianjin'></view>
+</view>
+<view class='line'></view>
+<button bindtap='submit' class='btn'>发布</button>
